# amqp-client-cli

./: .gitignore  Cargo.toml  README.md  setup.iss
snap/: snapcraft.yaml
src/: amqp.rs  app.rs  config.rs  file_logger.rs  main.rs  theme.rs  ui.rs
src/models/: enums.rs  exchange_options.rs  mod.rs  read_value.rs
